--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmp",
-  "version": "0.2.1",
+  "version": "0.3.0-ALPHA",
   "description": "Temporary file and directory creator",
   "author": "KARASZI István <github@spam.raszi.hu> (http://raszi.hu/)",
   "contributors": [
