output transpiled sources to dist instead of dist/lib

--- a/tsconfig-dist.json
+++ b/tsconfig-dist.json
@@ -10,7 +10,7 @@
     "experimentalDecorators": false,
     "declaration": false,
     "newLine": "lf",
-    "outDir": "dist/lib"
+    "outDir": "dist"
   },
   "compileOnSave": false,
   "include": [
